Redes sociais ocultadas do rodapé.

--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -68,7 +68,8 @@
 			<div class="container bg px-xl-0">
 				<div class="row justify-content-between align-items-baseline">
 					<div class="col-md-1" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-						<a href="index.html"><img srcset="i/signo-branco.png" class="img-logo" alt="logo da empresa"></a>
+						<a href="index.html"><img srcset="i/signo-branco.png" class="img-logo"
+								alt="logo da empresa"></a>
 						<a href="index.html">
 							<div class="logo color-white" style="text-align: center">Udara</div>
 							<style>
@@ -204,7 +205,6 @@
 					data-aos="fade-down" data-aos-delay="250">
 					<a href="sobre.html" class="mr-15 link color-main">Sobre</a>
 					<a href="#" class="mx-15 link color-main">Política</a>
-					<a href="termos-de-uso.html" class="mx-15 link color-main">Termos</a>
 				</div>
 				<div class="mb-10 mb-lg-0 col-lg-auto order-0" data-aos-duration="500" data-aos="fade-down"
 					data-aos-delay="0">
@@ -212,17 +212,22 @@
 				</div>
 				<div class="col-lg-4 col-sm-6 text-sm-left text-lg-right order-2 order-lg-0" data-aos-duration="500"
 					data-aos="fade-down" data-aos-delay="250">
-					<a href="#" class="mr-15 link color-main">Contatos</a>
+					<a href="#seu-nome" class="mr-15 link color-main">Contato</a>
+					<a href="termos-de-uso.html" class="mx-15 link color-main">Termos</a>
+
+					<!-- Ocultado até ativar redes sociais
 					<a href="#" class="mx-15 link color-main"><i class="fab fa-twitter"></i></a>
 					<a href="#" class="mx-15 link color-main"><i class="fab fa-facebook-square"></i></a>
-					<a href="#" class="ml-15 link color-main"><i class="fab fa-instagram "></i></a>
+					<a href="#" class="ml-15 link color-main"><i class="fab fa-instagram"></i></a>-->
+
 				</div>
 			</div>
 			<div class="row justify-content-center">
 				<div class="mt-10 col-xl-4 col-lg-5 col-md-6 col-sm-8" data-aos-duration="500" data-aos="fade-down"
 					data-aos-delay="0">
 					<div class="color-heading text-adaptive">
-						Dê uma olhada em nossos <a href="termos-de-uso.html" class="link color-heading">Termos de Uso</a> <br />
+						Dê uma olhada em nossos <a href="termos-de-uso.html" class="link color-heading">Termos de
+							Uso</a> <br />
 						e em nossa <a href="#" class="link color-heading">Política de Privacidade</a>
 					</div>
 				</div>
