--- a/sobre.html
+++ b/sobre.html
@@ -110,7 +110,7 @@
 				}
 			}
 		</style>
-		
+
 		<div class="container">
 			<div class="mb-3 logo color-white d-block d-xl-none text-center logo_mobile"> <a href="#"><img
 						srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
@@ -214,7 +214,6 @@
 					data-aos="fade-down" data-aos-delay="250">
 					<a href="#" class="mr-15 link color-main">Sobre</a>
 					<a href="politica-de-privacidade.html" class="mx-15 link color-main">Política</a>
-					<a href="termos-de-uso.html" class="mx-15 link color-main">Termos</a>
 				</div>
 				<div class="mb-10 mb-lg-0 col-lg-auto order-0" data-aos-duration="500" data-aos="fade-down"
 					data-aos-delay="0">
@@ -222,10 +221,14 @@
 				</div>
 				<div class="col-lg-4 col-sm-6 text-sm-left text-lg-right order-2 order-lg-0" data-aos-duration="500"
 					data-aos="fade-down" data-aos-delay="250">
-					<a href="#" class="mr-15 link color-main">Contatos</a>
+					<a href="#seu-nome" class="mr-15 link color-main">Contato</a>
+					<a href="termos-de-uso.html" class="mx-15 link color-main">Termos</a>
+
+					<!-- Ocultado até ativar redes sociais
 					<a href="#" class="mx-15 link color-main"><i class="fab fa-twitter"></i></a>
 					<a href="#" class="mx-15 link color-main"><i class="fab fa-facebook-square"></i></a>
-					<a href="#" class="ml-15 link color-main"><i class="fab fa-instagram "></i></a>
+					<a href="#" class="ml-15 link color-main"><i class="fab fa-instagram "></i></a>-->
+
 				</div>
 			</div>
 			<div class="row justify-content-center">
