--- a/termos-de-uso.html
+++ b/termos-de-uso.html
@@ -521,7 +521,6 @@
 					data-aos="fade-down" data-aos-delay="250">
 					<a href="sobre.html" class="mr-15 link color-main">Sobre</a>
 					<a href="politica-de-privacidade.html" class="mx-15 link color-main">Política</a>
-					<a href="#" class="mx-15 link color-main">Termos</a>
 				</div>
 				<div class="mb-10 mb-lg-0 col-lg-auto order-0" data-aos-duration="500" data-aos="fade-down"
 					data-aos-delay="0">
@@ -529,10 +528,15 @@
 				</div>
 				<div class="col-lg-4 col-sm-6 text-sm-left text-lg-right order-2 order-lg-0" data-aos-duration="500"
 					data-aos="fade-down" data-aos-delay="250">
-					<a href="#" class="mr-15 link color-main">Contatos</a>
+					<a href="#seu-nome" class="mr-15 link color-main">Contato</a>
+					<a href="#" class="mx-15 link color-main">Termos</a>
+
+
+					<!-- Ocultado até ativar redes sociais
 					<a href="#" class="mx-15 link color-main"><i class="fab fa-twitter"></i></a>
 					<a href="#" class="mx-15 link color-main"><i class="fab fa-facebook-square"></i></a>
-					<a href="#" class="ml-15 link color-main"><i class="fab fa-instagram "></i></a>
+					<a href="#" class="ml-15 link color-main"><i class="fab fa-instagram "></i></a>-->
+
 				</div>
 			</div>
 			<div class="row justify-content-center">
@@ -540,7 +544,8 @@
 					data-aos-delay="0">
 					<div class="color-heading text-adaptive">
 						Dê uma olhada em nossos <a href="#" class="link color-heading">Termos de Uso</a> <br />
-						e em nossa <a href="politica-de-privacidade.html" class="link color-heading">Política de Privacidade</a>
+						e em nossa <a href="politica-de-privacidade.html" class="link color-heading">Política de
+							Privacidade</a>
 					</div>
 				</div>
 			</div>
